done general structure. added some animations

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Creative</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://use.fontawesome.com/8253c6c8c6.css" media="all" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
@@ -40,22 +42,131 @@
     </header>
     <section class="hero-section">
       <div class="container">
-        <div class="content-wrapper text-center">
+        <div class="centred-wrapper text-center">
           <h1>Sed ut perspiciatis unde omnis iste</h1>
-          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia </p>
+          <hr>
+          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt </p>
           <a class="buttons" href="#">Download</a>
         </div>
       </div>
     </section>
     <section class="orange-section">
-      <div class="container">
-        <div class="content-wrapper text-center">
-          <h2>Sed ut perspiciatis unde omnis iste</h2>
-          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia </p>
+      <div class="centred-wrapper text-center">
+        <div class="container">
+          <h2>Sed ut perspiciatis unde omnis iste quis nostrum</h2>
+          <hr>
+          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt</p>
           <a class="buttons buttons-reversed" href="#">Get started!</a>
         </div>
       </div>
+    </section>
+    <section class="white-sections">
+      <div class="content-wrapper text-center">
+        <div class="container">
+          <h2>At Your Service</h2>
+          <hr>
+          <div class="row">
+            <div class="thumbnails col-md-6 col-lg-3">
+              <i class="fa fa-diamond" aria-hidden="true"></i>
+              <h3>Nemo enim ipsam</h3>
+              <p>At vero eos et accusamus et iusto odio</p>
+            </div>
+            <div class="thumbnails col-md-6 col-lg-3">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+              <h3>Nemo enim ipsam</h3>
+              <p>At vero eos et accusamus et iusto odio</p>
+            </div>
+            <div class="thumbnails col-md-6 col-lg-3">
+              <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+              <h3>Nemo enim ipsam</h3>
+              <p>At vero eos et accusamus et iusto odio</p>
+            </div>
+            <div class="thumbnails col-md-6 col-lg-3">
+              <i class="fa fa-heart" aria-hidden="true"></i>
+              <h3>Nemo enim ipsam</h3>
+              <p>At vero eos et accusamus et iusto odio</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="projects-section">
+      <div class="content-wrapper text-center">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="img-wrapper col-sm-6 col-md-4">
+              <div class="orange-layer">
+                <p>Category</p>
+                <p>Project name</p>
+              </div>
+                <img src="img/portfolio/thumbnails/1.jpg" alt="Project 1 image">
+            </div>
+            <div class="img-wrapper col-sm-6 col-md-4">
+              <div class="orange-layer">
 
+                <p>Category</p>
+                <p>Project name</p>
+              </div>
+                <img src="img/portfolio/thumbnails/2.jpg" alt="Project 2 image">
+            </div>
+            <div class="img-wrapper col-sm-6 col-md-4">
+              <div class="orange-layer">
+                <p>Category</p>
+                <p>Project name</p>
+              </div>
+                <img src="img/portfolio/thumbnails/3.jpg" alt="Project 3 image">
+            </div>
+            <div class="img-wrapper col-sm-6 col-md-4">
+              <div class="orange-layer">
+              <p>Category</p>
+              <p>Project name</p>
+            </div>
+                <img src="img/portfolio/thumbnails/4.jpg" alt="Project 4 image">
+            </div>
+            <div class="img-wrapper col-sm-6 col-md-4">
+              <div class="orange-layer">
+              <p>Category</p>
+              <p>Project name</p>
+            </div>
+                <img src="img/portfolio/thumbnails/5.jpg" alt="Project 5 image">
+            </div>
+            <div class="img-wrapper col-sm-6 col-md-4">
+              <div class="orange-layer">
+                <p>Category</p>
+                <p>Project name</p>
+              </div>
+                <img src="img/portfolio/thumbnails/6.jpg" alt="Project 6 image">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="dark-section">
+      <div class="centred-wrapper text-center">
+        <div class="container">
+          <h2>At vero eos et accusamus et iusto</h2>
+          <a class="buttons buttons-reversed" href="#">Download now!</a>
+        </div>
+      </div>
+    </section>
+    <section class="white-sections contact">
+      <div class="centred-wrapper text-center">
+        <div class="container">
+          <h2>Let's get in touch!</h2>
+          <hr>
+          <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere</p>
+          <div class="row">
+            <div class="thumbnails col-sm-6">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <p>123-456-789</p>
+            </div>
+            <div class="thumbnails col-sm-6">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              <a href="#" class="e-mail">feedback@mail.com</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
