sorted icons animations and started working on topmenu

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
           <hr>
           <div class="row">
             <div class="thumbnails col-md-6 col-lg-3">
-              <i class="fa fa-diamond" aria-hidden="true"></i>
+              <i class="fa fa-diamond orange-icons" aria-hidden="true"></i>
               <h3>Nemo enim ipsam</h3>
               <p>At vero eos et accusamus et iusto odio</p>
             </div>
             <div class="thumbnails col-md-6 col-lg-3">
-              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+              <i class="fa fa-paper-plane orange-icons" aria-hidden="true"></i>
               <h3>Nemo enim ipsam</h3>
               <p>At vero eos et accusamus et iusto odio</p>
             </div>
             <div class="thumbnails col-md-6 col-lg-3">
-              <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+              <i class="fa fa-newspaper-o orange-icons" aria-hidden="true"></i>
               <h3>Nemo enim ipsam</h3>
               <p>At vero eos et accusamus et iusto odio</p>
             </div>
             <div class="thumbnails col-md-6 col-lg-3">
-              <i class="fa fa-heart" aria-hidden="true"></i>
+              <i class="fa fa-heart orange-icons" aria-hidden="true"></i>
               <h3>Nemo enim ipsam</h3>
               <p>At vero eos et accusamus et iusto odio</p>
             </div>
@@ -94,14 +94,14 @@
       <div class="content-wrapper text-center">
         <div class="container-fluid">
           <div class="row">
-            <div class="img-wrapper col-sm-6 col-md-4">
+            <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer">
                 <p>Category</p>
                 <p>Project name</p>
               </div>
                 <img src="img/portfolio/thumbnails/1.jpg" alt="Project 1 image">
             </div>
-            <div class="img-wrapper col-sm-6 col-md-4">
+            <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer">
 
                 <p>Category</p>
@@ -109,28 +109,28 @@
               </div>
                 <img src="img/portfolio/thumbnails/2.jpg" alt="Project 2 image">
             </div>
-            <div class="img-wrapper col-sm-6 col-md-4">
+            <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer">
                 <p>Category</p>
                 <p>Project name</p>
               </div>
                 <img src="img/portfolio/thumbnails/3.jpg" alt="Project 3 image">
             </div>
-            <div class="img-wrapper col-sm-6 col-md-4">
+            <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer">
               <p>Category</p>
               <p>Project name</p>
             </div>
                 <img src="img/portfolio/thumbnails/4.jpg" alt="Project 4 image">
             </div>
-            <div class="img-wrapper col-sm-6 col-md-4">
+            <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer">
               <p>Category</p>
               <p>Project name</p>
             </div>
                 <img src="img/portfolio/thumbnails/5.jpg" alt="Project 5 image">
             </div>
-            <div class="img-wrapper col-sm-6 col-md-4">
+            <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer">
                 <p>Category</p>
                 <p>Project name</p>
@@ -157,11 +157,11 @@
           <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere</p>
           <div class="row">
             <div class="thumbnails col-sm-6">
-              <i class="fa fa-phone" aria-hidden="true"></i>
+              <i class="fa fa-phone dark-icons" aria-hidden="true"></i>
               <p>123-456-789</p>
             </div>
             <div class="thumbnails col-sm-6">
-              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              <i class="fa fa-envelope-o dark-icons" aria-hidden="true"></i>
               <a href="#" class="e-mail">feedback@mail.com</a>
             </div>
           </div>
