--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#orangeSection">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#whiteSection">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#projectSection">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contactSection">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
-    <section class="hero-section">
+    <section class="hero-section parallax">
       <div class="container">
         <div class="centred-wrapper text-center">
           <h1>Sed ut perspiciatis unde omnis iste</h1>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </section>
-    <section class="orange-section">
+    <section id="orangeSection" class="orange-section">
       <div class="centred-wrapper text-center">
         <div class="container">
           <h2>Sed ut perspiciatis unde omnis iste quis nostrum</h2>
@@ -60,7 +60,7 @@
         </div>
       </div>
     </section>
-    <section class="white-sections">
+    <section id="whiteSection" class="white-sections">
       <div class="content-wrapper text-center">
         <div class="container">
           <h2>At Your Service</h2>
@@ -90,7 +90,7 @@
         </div>
       </div>
     </section>
-    <section class="projects-section">
+    <section id="projectSection" class="projects-section">
       <div class="content-wrapper text-center">
         <div class="container-fluid">
           <div class="row">
@@ -149,7 +149,7 @@
         </div>
       </div>
     </section>
-    <section class="white-sections contact">
+    <section class="white-sections contact" id="contactSection">
       <div class="centred-wrapper text-center">
         <div class="container">
           <h2>Let's get in touch!</h2>
@@ -170,7 +170,7 @@
     </section>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
