sorted burger menu. click outside topmenu and lightbox img closes them. sorted responsive

--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
           <h2>At Your Service</h2>
           <hr>
           <div class="row">
-            <div class="thumbnails col-md-6 col-lg-3">
+            <div class="thumbnails col-sm-6 col-lg-3">
               <i class="fa fa-diamond orange-icons" aria-hidden="true"></i>
               <h3>Nemo enim ipsam</h3>
               <p>At vero eos et accusamus et iusto odio</p>
             </div>
-            <div class="thumbnails col-md-6 col-lg-3">
+            <div class="thumbnails col-sm-6 col-lg-3">
               <i class="fa fa-paper-plane orange-icons" aria-hidden="true"></i>
               <h3>Nemo enim ipsam</h3>
               <p>At vero eos et accusamus et iusto odio</p>
             </div>
-            <div class="thumbnails col-md-6 col-lg-3">
+            <div class="thumbnails col-sm-6 col-lg-3">
               <i class="fa fa-newspaper-o orange-icons" aria-hidden="true"></i>
               <h3>Nemo enim ipsam</h3>
               <p>At vero eos et accusamus et iusto odio</p>
             </div>
-            <div class="thumbnails col-md-6 col-lg-3">
+            <div class="thumbnails col-sm-6 col-lg-3">
               <i class="fa fa-heart orange-icons" aria-hidden="true"></i>
               <h3>Nemo enim ipsam</h3>
               <p>At vero eos et accusamus et iusto odio</p>
@@ -101,74 +101,75 @@
                 <p>Category</p>
                 <p>Project name</p>
               </div>
-                <img src="img/portfolio/thumbnails/1.jpg" alt="Project 1 image"  style="width:100%" class="hover-shadow cursor">
+                <img src="img/portfolio/thumbnails/1.jpg" alt="Project 1 image" class="hover-shadow cursor">
             </div>
             <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer" onclick="openModal();currentSlide(2)">
                 <p>Category</p>
                 <p>Project name</p>
               </div>
-                <img src="img/portfolio/thumbnails/2.jpg" alt="Project 2 image"  style="width:100%" class="hover-shadow cursor">
+                <img src="img/portfolio/thumbnails/2.jpg" alt="Project 2 image" class="hover-shadow cursor">
             </div>
             <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer" onclick="openModal();currentSlide(3)">
                 <p>Category</p>
                 <p>Project name</p>
               </div>
-                <img src="img/portfolio/thumbnails/3.jpg" alt="Project 3 image"  style="width:100%" class="hover-shadow cursor">
+                <img src="img/portfolio/thumbnails/3.jpg" alt="Project 3 image" class="hover-shadow cursor">
             </div>
             <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer"onclick="openModal();currentSlide(4)" >
               <p>Category</p>
               <p>Project name</p>
             </div>
-                <img src="img/portfolio/thumbnails/4.jpg" alt="Project 4 image"  style="width:100%" class="hover-shadow cursor">
+                <img src="img/portfolio/thumbnails/4.jpg" alt="Project 4 image" class="hover-shadow cursor">
             </div>
             <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer"onclick="openModal();currentSlide(5)" >
               <p>Category</p>
               <p>Project name</p>
             </div>
-                <img src="img/portfolio/thumbnails/5.jpg" alt="Project 5 image"  style="width:100%" class="hover-shadow cursor">
+                <img src="img/portfolio/thumbnails/5.jpg" alt="Project 5 image" class="hover-shadow cursor">
             </div>
             <div class="img-wrapper col-md-6 col-lg-4">
               <div class="orange-layer"onclick="openModal();currentSlide(6)" >
                 <p>Category</p>
                 <p>Project name</p>
               </div>
-                <img src="img/portfolio/thumbnails/6.jpg" alt="Project 6 image"  style="width:100%" class="hover-shadow cursor">
+                <img src="img/portfolio/thumbnails/6.jpg" alt="Project 6 image" class="hover-shadow cursor">
             </div>
           </div>
           <div id="myModal" class="modal">
-            <span class="close cursor" onclick="closeModal()">&times;</span>
             <div class="modal-content">
-              <div class="mySlides">
-                <div class="numbertext">1 of 6</div>
-                  <img src="img/portfolio/thumbnails/1.jpg">
+              <div class="sliders-wrapper" onclick="plusSlides(1)">
+                <span class="close cursor" onclick="closeModal()">&times;</span>
+                <div class="mySlides">
+                  <img src="img/portfolio/thumbnails/1.jpg" class="img-fluid">
+                  <div class="numbertext">1 of 6</div>
+                </div>
+                <div class="mySlides">
+                    <img src="img/portfolio/thumbnails/2.jpg" class="img-fluid">
+                    <div class="numbertext">2 of 6</div>
+                </div>
+                <div class="mySlides">
+                    <img src="img/portfolio/thumbnails/3.jpg" class="img-fluid">
+                    <div class="numbertext">3 of 6</div>
+                </div>
+                <div class="mySlides">
+                    <img src="img/portfolio/thumbnails/4.jpg" class="img-fluid">
+                    <div class="numbertext">4 of 6</div>
+                </div>
+                <div class="mySlides">
+                    <img src="img/portfolio/thumbnails/5.jpg" class="img-fluid">
+                    <div class="numbertext">5 of 6</div>
+                </div>
+                <div class="mySlides">
+                    <img src="img/portfolio/thumbnails/6.jpg" class="img-fluid">
+                    <div class="numbertext">6 of 6</div>
+                </div>
               </div>
-              <div class="mySlides">
-                <div class="numbertext">2 of 6</div>
-                  <img src="img/portfolio/thumbnails/2.jpg">
-              </div>
-              <div class="mySlides">
-                <div class="numbertext">3 of 6</div>
-                  <img src="img/portfolio/thumbnails/3.jpg">
-              </div>
-              <div class="mySlides">
-                <div class="numbertext">4 of 6</div>
-                  <img src="img/portfolio/thumbnails/4.jpg">
-              </div>
-              <div class="mySlides">
-                <div class="numbertext">5 of 6</div>
-                  <img src="img/portfolio/thumbnails/5.jpg">
-              </div>
-              <div class="mySlides">
-                <div class="numbertext">6 of 6</div>
-                  <img src="img/portfolio/thumbnails/6.jpg">
-              </div>
-
-              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+              <a class="arrow prev" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="arrow next" onclick="plusSlides(1)">&#10095;</a>
             </div>
           </div>
         </div>
