--- a/index.html
+++ b/index.html
@@ -202,6 +202,26 @@
         </div>
       </div>
     </section>
+    <section class="orange-section footer">
+      <div class="content-wrapper text-center">
+        <div class="container-fluid">
+          <div class="row d-flex align-items-center">
+            <div class="copyright col-md-4 py-2">
+              <p>Copyright © Website 2016</p>
+            </div>
+            <div class="social col-md-4 py-2">
+              <a href="#" class="icons twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              <a href="#" class="icons facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              <a href="#" class="icons linedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            </div>
+            <div class="terms col-md-4 py-2">
+              <a href="#"><span>Privacy Policy</span></a>
+              <a href="#"><span>Terms of Use</span></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
