turned dark-section into second parallax and swapped order with contact section.

--- a/index.html
+++ b/index.html
@@ -175,14 +175,6 @@
         </div>
       </div>
     </section>
-    <section class="dark-section">
-      <div class="centred-wrapper text-center">
-        <div class="container">
-          <h2>At vero eos et accusamus et iusto</h2>
-          <a class="buttons buttons-reversed" href="#">Download now!</a>
-        </div>
-      </div>
-    </section>
     <section class="white-sections contact" id="contactSection">
       <div class="centred-wrapper text-center">
         <div class="container">
@@ -198,6 +190,16 @@
               <i class="fa fa-envelope-o dark-icons" aria-hidden="true"></i>
               <a href="#" class="e-mail">feedback@mail.com</a>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="dark-section">
+      <div class="parallax two">
+        <div class="centred-wrapper text-center">
+          <div class="container">
+            <h2>At vero eos et accusamus et iusto</h2>
+            <a class="buttons buttons-reversed" href="#">Download now!</a>
           </div>
         </div>
       </div>
