lightbox dynamically coded

--- a/index.html
+++ b/index.html
@@ -143,30 +143,6 @@
             <div class="modal-content">
               <div class="sliders-wrapper" onclick="plusSlides(1)">
                 <span class="close cursor" onclick="closeModal()">&times;</span>
-                <div class="mySlides">
-                  <img src="img/portfolio/thumbnails/1.jpg" class="img-fluid">
-                  <div class="numbertext">1 of 6</div>
-                </div>
-                <div class="mySlides">
-                    <img src="img/portfolio/thumbnails/2.jpg" class="img-fluid">
-                    <div class="numbertext">2 of 6</div>
-                </div>
-                <div class="mySlides">
-                    <img src="img/portfolio/thumbnails/3.jpg" class="img-fluid">
-                    <div class="numbertext">3 of 6</div>
-                </div>
-                <div class="mySlides">
-                    <img src="img/portfolio/thumbnails/4.jpg" class="img-fluid">
-                    <div class="numbertext">4 of 6</div>
-                </div>
-                <div class="mySlides">
-                    <img src="img/portfolio/thumbnails/5.jpg" class="img-fluid">
-                    <div class="numbertext">5 of 6</div>
-                </div>
-                <div class="mySlides">
-                    <img src="img/portfolio/thumbnails/6.jpg" class="img-fluid">
-                    <div class="numbertext">6 of 6</div>
-                </div>
               </div>
               <a class="arrow prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="arrow next" onclick="plusSlides(1)">&#10095;</a>
@@ -212,9 +188,9 @@
               <p>Copyright © Website 2016</p>
             </div>
             <div class="social col-md-4 py-2">
-              <a href="#" class="icons twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              <a href="#" class="icons facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              <a href="#" class="icons linedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              <span class="icons twitter"><i class="fa fa-twitter" aria-hidden="true"></i></span>
+              <span class="icons facebook"><i class="fa fa-facebook" aria-hidden="true"></i></span>
+              <span class="icons linedin"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
             </div>
             <div class="terms col-md-4 py-2">
               <a href="#"><span>Privacy Policy</span></a>
