--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <![endif]-->
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
-  <body>
+  <body class="no-scroll">
     <div class="spinner-wrapper">
       <div class="spinner">
         <i></i><i></i><i></i><i></i><i></i>
